[gd_scene load_steps=10 format=3 uid="uid://c6r0vvcejbthb"]

[ext_resource type="Script" path="res://Scripts/cvstest.gd" id="1_fdyoq"]
[ext_resource type="Script" path="res://Scripts/Dialogo.gd" id="2_6btu7"]
[ext_resource type="Texture2D" uid="uid://ddxmq1skqlofi" path="res://Sprites/cardbg1.jpg" id="3_ws4t0"]
[ext_resource type="FontFile" uid="uid://cdwav2ai3eo0u" path="res://Fonts/MorrisRomanBlack.ttf" id="4_aoas3"]
[ext_resource type="Script" path="res://Scripts/JsonChecker.gd" id="5_3imw6"]
[ext_resource type="PackedScene" uid="uid://bogmqbat6i0l3" path="res://Pref/card.tscn" id="6_fg0nq"]

[sub_resource type="Animation" id="Animation_kvi7l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240.987, 398)]
}

[sub_resource type="Animation" id="Animation_iftp7"]
resource_name = "esperando"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(240.987, 398), Vector2(240.987, 390), Vector2(240.987, 398)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8vb7"]
_data = {
"RESET": SubResource("Animation_kvi7l"),
"esperando": SubResource("Animation_iftp7")
}

[node name="Chemtective" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdyoq")
metadata/_edit_vertical_guides_ = []

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.367981
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6btu7")
metadata/_edit_group_ = true

[node name="BgColor" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.709804, 0.603922, 0.211765, 1)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.514
anchor_top = 0.5
anchor_right = 0.514
anchor_bottom = 0.5
offset_left = -212.264
offset_top = -324.074
offset_right = 179.224
offset_bottom = 323.981
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.176471, 0.0627451, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
offset_bottom = 3.34467
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862745, 0.87451, 0.690196, 1)

[node name="Dialogo1" type="RichTextLabel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.01
anchor_right = 0.95
anchor_bottom = 0.194
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false
autowrap_mode = 1

[node name="Resp1" type="RichTextLabel" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.5
anchor_right = 0.967
anchor_bottom = 0.693
offset_left = 181.243
offset_right = 181.243
theme_override_colors/default_color = Color(0.223529, 0.262745, 0.286275, 1)
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false

[node name="Resp2" type="RichTextLabel" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.494
anchor_right = 0.4
anchor_bottom = 0.701
offset_left = -219.783
offset_top = -3.2489
offset_right = -219.783
offset_bottom = -3.2489
theme_override_colors/default_color = Color(0.223529, 0.262745, 0.286275, 1)
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false

[node name="Dialogo2" type="RichTextLabel" parent="Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.806
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 11.6677
offset_right = -12.488
offset_bottom = -12.0549
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_aoas3")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "[color=#000000] adsadjk[/color] ashdkashjkhkjhasjkhdjksah djkashdkjashkjdhaskjdhaskjhds sad asd sad asd sad asd asd sd as dsad sadsadasm febbkjhh kja hdkah jk khwklj hkjhs jkhd jkash  jkdhw jkah kjdhsajkh djkash "
scroll_active = false

[node name="next" type="TextureRect" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.998
anchor_right = 1.0
anchor_bottom = 0.998
offset_left = 240.987
offset_top = 398.0
offset_right = 310.987
offset_bottom = 471.0
texture = ExtResource("3_ws4t0")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Panel/next"]
libraries = {
"": SubResource("AnimationLibrary_b8vb7")
}

[node name="bankCard" parent="Control/Panel" instance=ExtResource("6_fg0nq")]
layout_mode = 0
offset_left = 200.136
offset_top = 311.89
offset_right = 200.136
offset_bottom = 311.89
scale = Vector2(0.322107, 0.322107)

[node name="currentCard" parent="Control/Panel" instance=ExtResource("6_fg0nq")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511
anchor_top = 0.5
anchor_right = 0.511
anchor_bottom = 0.5
offset_left = 0.0856018
offset_top = -12.1375
offset_right = 0.0856018
offset_bottom = -12.1375
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.322107, 0.322107)

[node name="txtRespDer" parent="Control/Panel/currentCard/Front/Content/RespDer" index="0"]
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="txtRespIzq" parent="Control/Panel/currentCard/Front/Content/RespIzq" index="0"]
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="JsonChecker" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_3imw6")

[editable path="Control/Panel/currentCard"]
